--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<center><h1>null</h1></center>
-<hr>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Old Page</title>
+        <meta charset="UTF-8" />
+        <meta http-equiv="refresh" content="2; https://praxor.wtf/home"/>
+    </head>
+    <body>
+        <p>Did you mean to go to <a href="https://praxor.wtf/home">https://praxor.wtf/home</a>?</p>
+    </body>
+</html>
