--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Old Page</title>
+        <title>Welcome to the New Praxorian Medium</title>
         <meta charset="UTF-8" />
-        <meta http-equiv="refresh" content="2; https://praxor.wtf/home"/>
+        <meta http-equiv="refresh" content="0.5; https://praxor.wtf/home"/>
     </head>
     <body>
         <p>Did you mean to go to <a href="https://praxor.wtf/home">https://praxor.wtf/home</a>?</p>
