--- a/supporters/index.html
+++ b/supporters/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
     <head>
-        <title>The Praxor Website</title>
+        <title>The Praxor Supporters</title>
         <link rel="icon" href="https://praxor.wtf/oraxor.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,52 +58,45 @@
             </div>
         </nav>
         <main>
-            <div class="px-4 py-4 text-center jumbotron-background-gradient">
-                <div class="container rounded" style="background-color: rgba(25,25,25,0.7);">
-                    <div class="px-4 py-5 my-5">
-                        <img src="https://praxor.wtf/oraxor.png">
-                        <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: Consolas, monospace;"><i>The Praxor Website</i></h1>
-                        <p class="lead text-body-secondary" style="font-family: Consolas, monospace;">Welcome to my website. Feel free to stay a while and <i><a style="color: rgb(150,150,150);" href="https://praxor.wtf/chinesefrog.mp4" target="_blank">scroll</a></i>.</p>
-                    </div>
+            <div class="px-5 py-5">
+                <div class="container text-center justify-content-center">
+                    <h1 class="display-5">The Praxor Website's Amazing Supporters</h1>
                 </div>
             </div>
-            <br>
-            <div class="py-5 px-5">
-                <div class="container d-flex justify-content-center">
-                    <div class="row row-cols-3">
-                        <div class="col">
-                            <div class="card border-secondary" style="width: 18rem;">
-                                <img src="https://praxor.wtf/praxor1.png" class="card-img-top" alt="praxor">
-                                <div class="card-body">
-                                    <h5 class="card-title">Who am I?</h5>
-                                    <p class="card-text">Hello! My name is praxor, and I do a lot of things, suprisingly all at once... not very balanced.</p>
-                                    <a href="https://praxor.wtf/about" class="btn btn-primary">about my website</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card border-secondary" style="width: 18rem;">
-                                <img src="https://praxor.wtf/praxor2.png" class="card-img-top" alt="praxor">
-                                <div class="card-body">
-                                    <h5 class="card-title">What do I do?</h5>
-                                    <p class="card-text">My life is kinda short and simple, I am a multi-instrumentalist, I compose music, I am a rookie web designer, I play in the marching band, I'm good at math, etc., etc.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card border-secondary" style="width: 18rem;">
-                                <img src="https://praxor.wtf/oraxor.png" class="card-img-top" alt="what the hell">
-                                <div class="card-body">
-                                    <h5 class="card-title">Want more praxor?</h5>
-                                    <p class="card-text">Feel free to get in touch, I don't bite. <i>You can also find my socials on this page.</i></p>
-                                    <a class="btn btn-primary" href="https://praxor.wtf/contact">contact me</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <div class="px-4 py-4 bg-body-secondary">
+                <div class="container">
+                    <p>Hello, everyone!<br><br>To anyone who wants to support me, and even my website, there are many ways to do this! You can create a piece of fan art that resembles me, or you can donate money to help me run my website, and even support my projects! Now, if you know me, <i>I would prefer the fan art</i>, however I appreciate any form of support that I can get, it's after all, "not about the money, but about the funny", as a wise man once said. With that being said, here is a list of all my current supporters, and wishes to get many more! Lastly, if you want to support me check out the section below the table.</p>
                 </div>
             </div>
-            <br>
+            <div class="px-4 py-4 bg-body-secondary">
+                <div class="container">
+                    <table class="table table-dark table-striped border">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Supporter Since</th>
+                                <th scope="col">Donated</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Toohi</td>
+                                <td>August 15 2021</td>
+                                <td>Fan Art, Music</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="px-4 py-5 bg-body-secondary">
+                <div class="container">
+                    <h3>If you want to support me, feel free to click any of these links:</h3>
+                    <a href="https://praxor.wtf/contact">https://praxor.wtf/contact</a><span> (get in touch directly, usually to send me fan art)</span><br>
+                    <a href="https://ko-fi.com/praxor">https://ko-fi.com/praxor</a><span> (you have to let me know when you support me here, i think)</span>
+                </div>
+            </div>
             <div class="container">
                 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                     <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
@@ -119,41 +112,9 @@
                     </ul>
                 </footer>
             </div>
-            <div class="toast-container position-fixed bottom-0 end-0 p-3">
-                <div id="alreadyHomeToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                    <div class="toast-header">
-                        <img src="https://praxor.wtf/oraxor.png" width="16" height="16" class="rounded me-2" alt="praxor website logo">
-                        <strong class="me-auto">The Praxor Website</strong>
-                        <small>now</small>
-                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                    </div>
-                    <div class="toast-body">
-                        You're already on the home page!
-                    </div>
-                </div>
-            </div>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
-        <script>
-            const toastTrigger = document.getElementById('alreadyHome')
-            const toastTrigger2 = document.getElementById('alreadyHome2')
-            const alreadyHomeToast = document.getElementById('alreadyHomeToast')
-            const alreadyHomeToast2 = document.getElementById('alreadyHomeToast')
-
-            if (toastTrigger) {
-                const toastBootstrap = bootstrap.Toast.getOrCreateInstance(alreadyHomeToast)
-                toastTrigger.addEventListener('click', () => {
-                    toastBootstrap.show()
-              })
-            }
-            if (toastTrigger2) {
-                const toastBootstrap = bootstrap.Toast.getOrCreateInstance(alreadyHomeToast)
-                toastTrigger2.addEventListener('click', () => {
-                    toastBootstrap.show()
-                })
-            }
-        </script>
         <script type="text/javascript">
             var clockElement = document.getElementById('clock');
             function clock() {
