--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
         <div class="dc">
             <h1>404: Not Found</h1>
             <h3>Javascript is not supported, so you can't enjoy the cool effect.</h3>
-            <video width="320" height="320" controls>
+            <video width="320" height="320" controls loop autoplay>
                 <source src="https://praxor.wtf/catttt.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
