--- a/art/index.html
+++ b/art/index.html
@@ -30,6 +30,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="https://praxor.wtf/art">Art Album</a></li>
                                 <li><a class="dropdown-item" href="https://praxor.wtf/merch">Merchandise</a></li>
+                                <li><a class="dropdown-item" href="https://praxor.wtf/supporters">My Supporters</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="https://praxor.wtf/thanks">Special Thanks</a></li>
                                 <li><a class="dropdown-item" href="https://praxor.wtf/about">About</a></li>
