--- a/thanks/index.html
+++ b/thanks/index.html
@@ -137,10 +137,9 @@
                             <img src="https://praxor.wtf/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
+                            <h1>Froggicycle</h1>
+                            <p>Certified real one since day one, this guy has been up and there for me, even though this is the internet. I mean, sometimes a praxor needs emotional support, and this guy has definitely had my back. I couldn't of dared to ask for a different froggicycle that was in any way different from this guy. </p>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#froggyDiscordModal">Discord</button>
                         </div>
                     </div>
                     <hr>
@@ -149,10 +148,10 @@
                             <img src="https://praxor.wtf/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
+                            <h1>Macintoshing</h1>
+                            <p>No one would've ever suspected me to put this guy on my wall of fame, but he's definitely cool, despite us not being friends. No one said this was a friends wall, after all. This guy is actually the motivation to update my website, as from humble beginnings of us learning HTML together, he decided to make it a real challenge to make a cooler website than one another. Let's see how you eat this one, mac! Emm, feel free to check out my competition below.<br><br>P.S. He might've quit Discord, so I don't know if you're gonna be able to reach him using that.</p>
+                            <a class="btn btn-primary" href="https://easfrq.live">Website</a>
+                            <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#macDiscordModal">Discord</button>
                         </div>
                     </div>
                     <hr>
@@ -161,10 +160,9 @@
                             <img src="https://praxor.wtf/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
+                            <h1>Nxne</h1>
+                            <p>His name is pronounced as "Nine", like the number. He is literally the coolest high school senior (now graduated) ever tbh. He just absolutely deserves a special recognition here, because he listens to me and hears me out no matter what I'm smoking.</p>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#nxneDiscordModal">Discord</button>
                         </div>
                     </div>
                     <hr>
@@ -173,9 +171,9 @@
                             <img src="https://praxor.wtf/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
+                            <h1>Larvi</h1>
+                            <p>Yes, yes. I know his name is literally a Pokemon, but he's like the coolest russian bro. Also from humble beginnings, once he joined Discord, he's been with me as a friend for a while, and I honestly have taken a liking to what he does. He's also my motivation for </p>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#larviDiscordModal">Discord</button>
                             <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
                         </div>
                     </div>
@@ -365,7 +363,7 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade" tabindex="-1" id="berhDiscordModal" aria-labelledby="berhDiscord" aria-hidden="false">
+            <div class="modal fade" tabindex="-1" id="berhDiscordModal" aria-labelledby="berhDiscord" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -378,7 +376,7 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade" tabindex="-1" id="bluefireDiscordModal" aria-labelledby="bluefireDiscord" aria-hidden="false">
+            <div class="modal fade" tabindex="-1" id="bluefireDiscordModal" aria-labelledby="bluefireDiscord" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -386,12 +384,12 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <p id="bluefireDiscordUsername">Blueistic</p>
+                            <p id="bluefireDiscordUsername">blueisti</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="modal fade" tabindex="-1" id="turioDiscordModal" aria-labelledby="turioDiscord" aria-hidden="false">
+            <div class="modal fade" tabindex="-1" id="turioDiscordModal" aria-labelledby="turioDiscord" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -400,6 +398,58 @@
                         </div>
                         <div class="modal-body">
                             <p id="turioDiscordUsername">.turio</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" tabindex="-1" id="froggyDiscordModal" aria-labelledby="froggyDiscord" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Froggicycle's discord</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p id="froggyDiscordUsername">fxog</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" tabindex="-1" id="macDiscordModal" aria-labelledby="macDiscord" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Macintoshing's discord</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p id="macDiscordUsername">macintoshing</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" tabindex="-1" id="nxneDiscordModal" aria-labelledby="nxneDiscord" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Nxne's discord</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p id="nxneDiscordUsername">nxne_nine</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" tabindex="-1" id="larviDiscordModal" aria-labelledby="larviDiscord" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Larvi's discord</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p id="larviDiscordUsername">kkrlarvi</p>
                         </div>
                     </div>
                 </div>
