--- a/thanks/index.html
+++ b/thanks/index.html
@@ -172,9 +172,9 @@
                         </div>
                         <div class="col-6">
                             <h1>Larvi</h1>
-                            <p>Yes, yes. I know his name is literally a Pokemon, but he's like the coolest russian bro. Also from humble beginnings, once he joined Discord, he's been with me as a friend for a while, and I honestly have taken a liking to what he does. He's also my motivation for </p>
+                            <p>Yes, yes. I know his name is literally a Pokemon, but he's like the coolest russian bro. Also from humble beginnings, once he joined Discord, he's been with me as a friend for a while, and I honestly have taken a liking to what he does. He's also my motivation for learning russian, and he also prompted me to remake my website.</p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#larviDiscordModal">Discord</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
+                            <a class="btn btn-secondary" href="https://meowking.tech" target="_blank">Website</a>
                         </div>
                     </div>
                     <hr>
