--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
     <head>
         <title>About The Praxor Website</title>
-        <link rel="icon" href="https://praxor.wtf/oraxor.png">
+        <link rel="icon" href="https://praxor.wtf/media/oraxor.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
