--- a/art/index.html
+++ b/art/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
     <head>
         <title>The Praxor Art Collection</title>
-        <link rel="icon" href="https://praxor.wtf/oraxor.png">
+        <link rel="icon" href="https://praxor.wtf/media/oraxor.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -91,7 +91,7 @@
                         </div>
                         <div class="col">
                             <div class="card shadow-sm">
-                                <img class="card-img-top" src="https://praxor.wtf/oraxor.png">
+                                <img class="card-img-top" src="https://praxor.wtf/media/oraxor.png">
                                 <div class="card-body">
                                     <p class="card-text">Despite being just a normal cat with huge eyes, this cat is the definition of praxor, well at least from where he comes from. This "<a href="https://steamcommunity.com/id/praxor2" target="_blank">deranged animal</a>" is the reason praxor is here today.</p>
                                     <div class="d-flex text-back">
