--- a/home/index.html
+++ b/home/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
     <head>
         <title>The Praxor Website</title>
-        <link rel="icon" href="https://praxor.wtf/oraxor.png">
+        <link rel="icon" href="https://praxor.wtf/media/oraxor.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -61,7 +61,7 @@
             <div class="px-4 py-4 text-center jumbotron-background-gradient">
                 <div class="container rounded" style="background-color: rgba(25,25,25,0.7);">
                     <div class="px-4 py-5 my-5">
-                        <img src="https://praxor.wtf/oraxor.png">
+                        <img src="https://praxor.wtf/media/oraxor.png">
                         <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: Consolas, monospace;"><i>The Praxor Website</i></h1>
                         <p class="lead text-body-secondary" style="font-family: Consolas, monospace;">Welcome to my website. Feel free to stay a while and <i><a style="color: rgb(150,150,150);" href="https://praxor.wtf/chinesefrog.mp4" target="_blank">scroll</a></i>.</p>
                     </div>
@@ -92,7 +92,7 @@
                         </div>
                         <div class="col">
                             <div class="card border-secondary" style="width: 18rem;">
-                                <img src="https://praxor.wtf/oraxor.png" class="card-img-top" alt="what the hell">
+                                <img src="https://praxor.wtf/media/oraxor.png" class="card-img-top" alt="what the hell">
                                 <div class="card-body">
                                     <h5 class="card-title">Want more praxor?</h5>
                                     <p class="card-text">Feel free to get in touch, I don't bite. <i>You can also find my socials on this page.</i></p>
@@ -122,7 +122,7 @@
             <div class="toast-container position-fixed bottom-0 end-0 p-3">
                 <div id="alreadyHomeToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                     <div class="toast-header">
-                        <img src="https://praxor.wtf/oraxor.png" width="16" height="16" class="rounded me-2" alt="praxor website logo">
+                        <img src="https://praxor.wtf/media/oraxor.png" width="16" height="16" class="rounded me-2" alt="praxor website logo">
                         <strong class="me-auto">The Praxor Website</strong>
                         <small>now</small>
                         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
