--- a/thanks/index.html
+++ b/thanks/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
     <head>
         <title>The Praxor Special Thanks</title>
-        <link rel="icon" href="https://praxor.wtf/oraxor.png">
+        <link rel="icon" href="https://praxor.wtf/media/oraxor.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -70,7 +70,7 @@
                         </div>
                         <div class="col-6">
                             <h1>⭐ Berh</h1>
-                            <p>Despite our inability to find games to play together <i>(as of October 2023)</i>, I would still consider Berh to be one of the <strong>bestest</strong> friends I have! I mean, you can literally be however and he would still hang out with you, or maybe he's just like that because I'm praxor.<br><br>Dunno, but he's like the best of the best as being a real one. Dude is like a god tier wingman to me.</p>
+                            <p>I consider Berh to be one of the <i><strong>bestest</strong></i> friends I have! I mean, you can literally be however and he would still hang out with you, or maybe he's just like that because I'm praxor.<br><br>Dunno, but he's like the best of the best as being a real one. Dude is like a god tier wingman to me.</p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#berhDiscordModal">Discord</button>
                             <a class="btn btn-secondary" href="https://soundcloud.com/xzaviersaccount" target="_blank">Soundcloud</a>
                             <a class="btn btn-secondary" href="https://steamcommunity.com/profiles/76561199023641672" target="_blank">Steam</a>
@@ -79,7 +79,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                             <img src="https://praxor.wtf/oraxor.png" width="200px">
+                             <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>⭐ milk</h1>
@@ -113,7 +113,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Fyre</h1>
@@ -134,7 +134,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Froggicycle</h1>
@@ -145,7 +145,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Macintoshing</h1>
@@ -157,7 +157,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Nxne</h1>
@@ -168,7 +168,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Larvi</h1>
@@ -180,7 +180,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
@@ -192,7 +192,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
@@ -204,7 +204,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
@@ -216,7 +216,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
@@ -228,7 +228,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
@@ -240,7 +240,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
@@ -252,7 +252,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
@@ -264,7 +264,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
@@ -276,7 +276,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
@@ -288,7 +288,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
@@ -300,7 +300,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
@@ -312,7 +312,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
@@ -324,7 +324,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Example Name</h1>
