patches and fixes what the fuck

--- a/home/index.html
+++ b/home/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
     <head>
         <title>The Praxor Website</title>
-        <link rel="icon" href="https://praxor.wtf/media/oraxor.png">
+        <link rel="icon" href="./media/oraxor.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -63,7 +63,7 @@
                     <div class="px-4 py-5 my-5">
                         <img src="https://praxor.wtf/media/oraxor.png">
                         <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: Consolas, monospace;"><i>The Praxor Website</i></h1>
-                        <p class="lead text-body-secondary" style="font-family: Consolas, monospace;">Welcome to my website. Feel free to stay a while and <i><a style="color: rgb(150,150,150);" href="https://praxor.wtf/chinesefrog.mp4" target="_blank">scroll</a></i>.</p>
+                        <p class="lead text-body-secondary" style="font-family: Consolas, monospace;">Welcome to my website. Feel free to stay a while and <i><a style="color: rgb(150,150,150);" href="https://praxor.wtf/media/chinesefrog.mp4" target="_blank">scroll</a></i>.</p>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                     <div class="row row-cols-3">
                         <div class="col">
                             <div class="card border-secondary" style="width: 18rem;">
-                                <img src="https://praxor.wtf/praxor1.png" class="card-img-top" alt="praxor">
+                                <img src="https://praxor.wtf/media/praxor1.png" class="card-img-top" alt="praxor">
                                 <div class="card-body">
                                     <h5 class="card-title">Who am I?</h5>
                                     <p class="card-text">Hello! My name is praxor, and I do a lot of things, suprisingly all at once... not very balanced.</p>
@@ -83,7 +83,7 @@
                         </div>
                         <div class="col">
                             <div class="card border-secondary" style="width: 18rem;">
-                                <img src="https://praxor.wtf/praxor2.png" class="card-img-top" alt="praxor">
+                                <img src="https://praxor.wtf/media/praxor2.png" class="card-img-top" alt="praxor">
                                 <div class="card-body">
                                     <h5 class="card-title">What do I do?</h5>
                                     <p class="card-text">My life is kinda short and simple, I am a multi-instrumentalist, I compose music, I am a rookie web designer, I play in the marching band, I'm good at math, etc., etc.</p>
