--- a/supporters/index.html
+++ b/supporters/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
     <head>
         <title>The Praxor Supporters</title>
-        <link rel="icon" href="https://praxor.wtf/media/oraxor.png">
+        <link rel="icon" href="./media/oraxor.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse px-5">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#" id="alreadyHome">Home</a>
+                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/home">Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Extras</a>
@@ -106,7 +106,7 @@
                         </svg>
                     </a>
                     <ul class="nav col-md-4 justify-content-end">
-                        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" id="alreadyHome2">Home</a></li>
+                        <li class="nav-item"><a href="https://praxor.wtf/home" class="nav-link px-2 text-body-secondary">Home</a></li>
                         <li class="nav-item"><a href="https://praxor.wtf/contact" class="nav-link px-2 text-body-secondary">Contact</a></li>
                         <li class="nav-item"><a href="https://praxor.wtf/about" class="nav-link px-2 text-body-secondary">About</a></li>
                     </ul>
