--- a/thanks/index.html
+++ b/thanks/index.html
@@ -79,7 +79,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                             <img src="https://praxor.wtf/media/oraxor.png" width="200px">
+                             <img src="https://praxor.wtf/media/milk.jpg" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>⭐ milk</h1>
@@ -113,11 +113,11 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/fyre.jpg" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Fyre</h1>
-                            <p>Even though we randomly met on Roblox, it was definitely a sure thing to have this guy as a friend! I mean come on, thi guy is literally himothy! He's funny, based, and cool, like your average 80s school movie bully, and it's respectable. He especially gets a thanks, for drawing that sexy art that you can find on my art page, at <a href="https://praxor.wtf/art">https://praxor.wtf/art</a></p>
+                            <p>Even though we randomly met on Roblox, it was definitely a sure thing to have this guy as a friend! I mean come on, thi guy is literally himothy! He's funny, based, and cool, like your average 80s school movie bully, and it's respectable. He especially gets a thanks, for drawing that sexy art that you can find on my art page, at <a href="https://praxor.wtf/art">https://praxor.wtf/art</a><br><br>I didn't know what to put so that profile picture art is by <a href="https://twitter.com/hautecleare" target="_blank">https://twitter.com/hautecleare</a></p>
                         </div>
                     </div>
                     <hr>
