--- a/thanks/index.html
+++ b/thanks/index.html
@@ -79,7 +79,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                             <img src="https://praxor.wtf/media/milk.jpg" width="200px">
+                             <img src="https://praxor.wtf/media/milk.jpg" width="200px" height="200px">
                         </div>
                         <div class="col-6">
                             <h1>⭐ milk</h1>
@@ -134,7 +134,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/froggy.jpg" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Froggicycle</h1>
@@ -145,7 +145,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/mac.png" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Macintoshing</h1>
@@ -157,7 +157,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/nxne.gif" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Nxne</h1>
@@ -168,7 +168,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/larvi.jpg" width="200px">
                         </div>
                         <div class="col-6">
                             <h1>Larvi</h1>
