--- a/thanks/index.html
+++ b/thanks/index.html
@@ -168,7 +168,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/media/larvi.jpg" width="200px">
+                            <img src="https://praxor.wtf/media/larvi.jpg" width="200px" height="200px">
                         </div>
                         <div class="col-6">
                             <h1>Larvi</h1>
